finish with mongodb connection

--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,2 @@
+MONGO_URI =mongodb+srv://test:Cq6pYF3PS0pkoav7@invoicegenrator.30t95jz.mongodb.net/?retryWrites=true&w=majority&appName=invoiceGenrator
 PORT=8000
